# RL-Kirigami

./: .gitignore  README.md  distill_training.py  fm_training.py  pyproject.toml  rl_training.py
configs/: data_generator.yaml  training.yaml
data_generator/: generator.py  utils.py  visualization.py
kirigami_training/: __init__.py  data.py  metrics.py  model.py  rewards.py  sampling.py  targets.py  utils.py
torchmetrics/: __init__.py
