[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-kirigami"
version = "0.1.0"
description = "Kirigami data generation and visualization utilities."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "imageio",
    "matplotlib",
    "numpy",
    "PyYAML",
]

[project.scripts]
rl-kirigami-generate = "data_generator.generator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_generator*"]
namespaces = true

[tool.black]
line-length = 100
