[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-kirigami"
version = "0.1.0"
description = "Kirigami data generation and visualization utilities."
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flow_matching==1.0.10",
    "imageio",
    "matplotlib",
    "monai-generative==0.2.3",
    "numpy",
    "pytorch-lightning==2.5.3",
    "PyYAML",
    "scipy",
    "tensorboard",
    "torch==2.5.1",
    "torchmetrics",
]

[project.scripts]
rl-kirigami-generate = "data_generator.generator:main"
rl-kirigami-train-fm = "fm_training:main"
rl-kirigami-train-rl = "rl_training:main"

[tool.setuptools]
py-modules = [
    "fm_training",
    "rl_training",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_generator*", "kirigami_training*"]
namespaces = true

[tool.black]
line-length = 100
